Fix wrong app name

--- a/apps/authentication/package.json
+++ b/apps/authentication/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/chat-messaging",
+  "name": "@repo/authentication",
   "private": true,
   "scripts": {
     "dev": "tsx watch src/server.ts",
