--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "target": "es2017",
+    "lib": ["dom", "DOM.Iterable", "ESNext"],
     "jsx": "preserve",
     "noEmit": true,
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@repo/shared-types": ["../../packages/shared-types/src/index.ts"]
-    }
+      "@repo/shared-types": ["../../packages/shared-types/src/index.ts"],
+      "@/*": ["./src/*"]
+    },
+    "moduleResolution": "bundler",
+    "incremental": true,
+    "plugins": [{ "name": "next" }],
+    "module": "esnext"
   },
   "include": [
     "next-env.d.ts",
