--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
+    "dotenv-cli": "^11.0.0",
     "turbo": "^2.7.1",
     "typescript": "^5.9.3"
   }
