--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,8 +5,8 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "db:generate": "prisma generate --schema ./prisma/schema.prisma",
-    "db:push": "prisma db push --schema ./prisma/schema.prisma"
+    "db:generate": "dotenv -e ../../.env -- prisma generate --schema ./prisma/schema.prisma",
+    "db:push": "dotenv -e ../../.env --prisma db push --schema ./prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0"
