--- a/turbo.json
+++ b/turbo.json
@@ -6,8 +6,10 @@
       "env": ["DATABASE_URL"]
     },
     "db:generate": {
+      "inputs": ["prisma/schema.prisma"],
       "cache": false,
       "env": ["DATABASE_URL"]
-    }
+    },
+    "dev": { "cache": false, "persistent": true, "env": ["DATABASE_URL"] }
   }
 }
