Add direct reference to shared packages

--- a/apps/marketplace/tsconfig.json
+++ b/apps/marketplace/tsconfig.json
@@ -4,5 +4,8 @@
     "outDir": "dist",
     "composite": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "paths": {
+    "@repo/*": ["../../packages/*/src"]
+  }
 }
