--- a/apps/marketplace/tsconfig.json
+++ b/apps/marketplace/tsconfig.json
@@ -4,11 +4,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "composite": true,
-    "baseUrl": ".",
-    "paths": {
-      "@repo/shared-types": ["../../packages/shared-types/src/index.ts"],
-      "@repo/database": ["../../packages/database/index.ts"]
-    }
+    "baseUrl": "."
   },
   "include": ["src"],
   "references": [
