--- a/apps/marketplace/tsconfig.json
+++ b/apps/marketplace/tsconfig.json
@@ -4,7 +4,11 @@
     "outDir": "dist",
     "rootDir": "src",
     "composite": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@repo/shared-types": ["../../packages/shared-types/src/index.ts"],
+      "@repo/database": ["../../packages/database/src/index.ts"]
+    }
   },
   "include": ["src"],
   "references": [
