--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,10 +2,11 @@
   "name": "@repo/database",
   "version": "0.0.1",
   "private": true,
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "db:generate": "dotenv -e ../../.env -- prisma generate --schema ./prisma/schema.prisma",
+    "build": "tsc",
+    "db:generate": "dotenv -e ../../.env -- prisma generate",
     "db:push": "dotenv -e ../../.env --prisma db push --schema ./prisma/schema.prisma"
   },
   "dependencies": {
