--- a/apps/marketplace/tsconfig.json
+++ b/apps/marketplace/tsconfig.json
@@ -2,9 +2,11 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "composite": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@repo/shared-types": ["../../packages/shared-types/src/index.ts"],
+      "@repo/database": ["../../packages/database/src/index.ts"]
+    }
   },
   "include": ["src"]
 }
