--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,12 +2,11 @@
   "name": "@repo/database",
   "version": "0.0.1",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "type": "module",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "scripts": {
-    "build": "tsc",
-    "db:generate": "dotenv -e ../../.env -- prisma generate",
-    "db:push": "dotenv -e ../../.env --prisma db push --schema ./prisma/schema.prisma"
+    "db:generate": "dotenv -e ../../.env -- prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0"
