Add professional structure to marketplace component, add error middleware handler, add entry schema validation middleware, divide logic into routing, business and DB access for clarity

--- a/apps/marketplace/package.json
+++ b/apps/marketplace/package.json
@@ -10,7 +10,8 @@
     "@repo/database": "workspace:*",
     "@repo/shared-types": "workspace:*",
     "@types/express": "^5.0.6",
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "tsx": "^4.7.0"
