Implement profile component + share common backend functions package + implement initial dashboard page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "files": [],
   "references": [
     { "path": "packages/shared-types" },
+    { "path": "packages/database" },
+    { "path": "packages/backend-utils" },
     { "path": "apps/marketplace" },
+    { "path": "apps/profile-management" },
     { "path": "apps/web" }
   ]
 }
