--- a/apps/marketplace/package.json
+++ b/apps/marketplace/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@repo/database": "workspace:*",
     "@repo/shared-types": "workspace:*",
+    "@repo/backend-utils": "workspace:*",
     "@types/express": "^5.0.6",
     "express": "^4.22.1",
     "zod": "^4.2.1"
