--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,6 +9,7 @@
     "baseUrl": ".",
     "paths": {
       "@repo/shared-types": ["../../packages/shared-types/src/index.ts"],
+      "@repo/database": ["../../packages/database/src/index.ts"],
       "@/*": ["./src/*"]
     },
     "incremental": true,
@@ -18,6 +19,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "../../packages/database/src/**/*",
     "../../packages/shared-types/src/**/*"
   ]
 }
